--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,20 @@
+body{
+  background-image: url("../public/fantasy-background.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover; 
+  margin:0;
+}
+
 .app{
+ 
   display: flex;
-  padding:30px;
+  padding:20px;
+  justify-content: center;
+  margin:0;
+  align-items : center;
+
 }
 
 .game{
@@ -8,6 +22,10 @@
   height: 560px;
   display:flex;
   flex-wrap: wrap;
+  align-self:center;
+  border-width: 10px;
+  border-color: rgb(0,0,0,20%);
+  border-style: groove;
 }
 
 .game img{
