--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,56 @@
-body{
+body {
   background-image: url("../public/fantasy-background2.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  background-size: cover; 
-  margin:0;
-  height: 100vh; 
-  
+  background-size: cover;
+  margin: 0;
+  height: 100vh;
 }
 
-.app{
- 
-  display:grid;
+.app {
+  display: flex;
   align-items: center; /* Vertically align items */
   justify-content: center; /* Horizontally align items */
-  padding:0px;
-  margin:0;
-  height: 100vh; 
-
+  padding: 0px;
+  margin: 0;
+  height: 100vh;
 }
 
-.game{
+.game {
+  padding: 10px;
   width: 560px;
   height: 560px;
-  display:flex;
+  display: flex;
   flex-wrap: wrap;
-  align-self:center;
+  align-self: center;
   border-width: 10px;
-  border-color: rgb(250,250,250,20%);
+  border-color: rgb(250, 250, 250, 20%);
   border-style: groove;
 }
 
-.game img{
-  width :70px;
-  height:70px;
+.game img {
+  width: 70px;
+  height: 70px;
+}
+
+.scoreBoard {
+  height: 100px;
+  width: 250px;
+  border-radius: 45%;
+  background-color: rgb(000, 000, 000, 0%);
+  border-color: rgba(255, 0, 0, 0%);
+  border-style: solid;
+  border-width: 2px;
+  justify-content: center;
+  text-align: center;
+  float: right;
+  padding: 0px;
+}
+
+.scoreDisplay {
+  color: red;
+  font-size: 50px;
+  text-align: center;
+  margin: 0px;
 }
