--- a/src/index.css
+++ b/src/index.css
@@ -16,14 +16,6 @@ body {
   margin: 0;
   height: 100vh;
 }
-/* .gameHolder {
-  width: 590px;
-  height: 590px;
-  display: flex;
-  flex-wrap: wrap;
-  align-self: center;
-}
-*/
 
 .game {
   position: absolute; /* Add absolute positioning */
@@ -32,24 +24,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-self: center;
-  /* border-width: 10px;
-  border-color: rgb(250, 250, 250, 20%);
-  border-style: groove; */
-}
-
-.gameHolder {
-  width: 590px;
-  height: 590px;
-  display: flex;
-  flex-wrap: wrap;
-  align-self: center;
-  gap: 0px;
-}
-
-.gameHolder img {
-  width: 80px;
-  height: 80px;
-  margin: 0px;
 }
 
 .game img {
@@ -58,6 +32,27 @@ body {
   margin: 1px;
   cursor: pointer;
   align-self: center;
+}
+
+.gameHolder {
+  /* background-color: rgb(0, 0, 0, 60%); */
+  width: 580px;
+  height: 590px;
+  display: flex;
+  flex-wrap: wrap;
+  align-self: center;
+  gap: 0px;
+  padding: 0px;
+  border-width: 10px;
+  border-color: rgb(250, 250, 250, 20%);
+  border-style: groove;
+}
+
+.gameHolder img {
+  width: 72px;
+  height: 72px;
+  margin: 0px;
+  opacity: 90%;
 }
 
 .game img:hover {
