--- a/src/index.css
+++ b/src/index.css
@@ -61,22 +61,35 @@ body {
 }
 
 .scoreBoard {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 30px;
+  background-image: url("./Images/score-board.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100px;
-  width: 250px;
-  border-radius: 45%;
-  background-color: rgb(000, 000, 000, 0%);
-  border-color: rgba(255, 0, 0, 0%);
-  border-style: solid;
-  border-width: 2px;
+  width: 200px;
+  padding: 0px;
   justify-content: center;
-  text-align: center;
-  float: right;
+  float: right !important;
   padding: 0px;
 }
 
 .scoreDisplay {
   color: red;
   font-size: 50px;
+  vertical-align: middle;
+  line-height: 100px;
   text-align: center;
+  justify-self: center;
   margin: 0px;
+}
+
+@media (max-width: 1000px) {
+  .Scoreboard {
+    position: relative;
+    margin: 10px auto;
+    transform: none;
+  }
 }
