--- a/src/Styles/gameHolder.css
+++ b/src/Styles/gameHolder.css
@@ -1,12 +1,32 @@
-.gameHolder {
-  align-self: center;
-  border: 10px groove hsla(0, 0%, 98%, 0.2);
+.game {
+  position: absolute; /* Add absolute positioning */
+  width: 590px;
+  height: 590px;
   display: flex;
   flex-wrap: wrap;
-  gap: 0;
-  height: 590px;
-  padding: 0;
+  align-self: center;
+}
+
+.game img {
+  width: 70px;
+  height: 70px;
+  margin: 1px;
+  cursor: pointer;
+  align-self: center;
+}
+
+.gameHolder {
+  /* background-color: rgb(0, 0, 0, 60%); */
   width: 580px;
+  height: 590px;
+  display: flex;
+  flex-wrap: wrap;
+  align-self: center;
+  gap: 0px;
+  padding: 0px;
+  border-width: 10px;
+  border-color: rgb(250, 250, 250, 20%);
+  border-style: groove;
 }
 
 .gameHolder img {
@@ -15,43 +35,8 @@
   margin: 0px;
   opacity: 90%;
 }
-.game {
-  display: flex;
-  flex-wrap: wrap;
-  height: 590px;
-  position: absolute;
-  width: 590px;
-}
-
-.game img {
-  width: 71px;
-  height: 71px;
-  margin: 1px;
-  cursor: pointer;
-  align-self: center;
-}
 
 .game img:hover {
   transform: scale(1.05);
   filter: drop-shadow(0 0 0.75rem rgb(255, 217, 0, 80%));
 }
-
-/* 
-.gameHolder {
-  position: relative;
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(8, 1fr);
-  grid-gap: 0px;
-  max-width: 100%;
-}
-
-
-.game {
-  position: absolute;
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(8, 1fr);
-  grid-gap: 0px;
-  max-width: 100%;
-} */
